--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="images/namelogo.png" alt="">
+                <img src="images/name-logo.png" alt="">
             </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -23,8 +23,8 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                <li class="nav__item"><a href="#services" class="nav__link">My Experience</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
@@ -44,18 +44,34 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Algorithm based Coding</h3>
-                <p>Much of my schoolwork has involved programming algorithms using Java. Topics such as Object Oriented Programming, introductory data structures, and introductions to topics such as recursion were covered.</p>
+                <h3>Education</h3>
+                <p>
+                    My university courses have equipped me with the essential skills for becoming a proficient software engineer. 
+                    The technical coursework, including "Data Structures and Algorithms" and "Database Management" 
+                    provided me with the foundational knowledge necessary for software development. 
+                    Simultaneously, non-technical courses like "Organizational Teamwork" and "Written Communication" 
+                    enhanced my collaborative and communication skills.
+                </p>
             </div>
 
             <div class="service">
-                <h3>Front-End</h3>
-                <p>Much of my recent work, as of 2022, has been involving website development, primarily with html and css, and the Laravel Framework. Outside of work, many of my smaller personal projects also primarily involve html, css, and javascript to create small scale websites with a focus on a specific function or feature.</p>
+                <h3>Internships and Experience</h3>
+                <p>
+                    My previous internship enhanced both my technical skills and my understanding of professional collaboration among 
+                    software engineers. I gained valuable insights into the use of industry tools and the importance of facilitating 
+                    seamless teamwork. Working with a manager, I acquired new technical skills and had the opportunity to make a noticeable 
+                    impact on the organization through independent projects and tasks.
+                </p>
             </div>
 
             <div class="service">
-                <h3>Back-End</h3>
-                <p>Part of my work with website developing. Mainly altered database tables in MariaDB, and utilized PHP to add functionality between the database tables and the website.</p>
+                <h3>Passion Projects</h3>
+                <p>
+                    Tackling the pain points in my daily life has proven to be an enjoyable and rewarding exercise in leveraging the skills 
+                    I've honed through my educational journey and previous internships. It's the perfect blend of personal passion projects 
+                    and the acquisition of technical expertise, creating projects that truly resonate with me. I am 
+                    seeking opportunities that give me drive and passion similarly to my projects, while  solving real-world problems.
+                </p>
             </div>
         </div>
         <a href="#work" class="btn">My Work</a>
@@ -64,10 +80,16 @@
     <!-- About Me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">College Student and Full-Stack Dev</p>
+        <p class="section__subtitle section__subtitle--about">College Student and Software Engineer</p>
 
         <div class="about-me__body">
-            <p>I am an upcoming sophomore at the University of Washington, College of Engineering.</p>
+            <p>
+                I currently go to the University of Washington for Human Centered Design and Engineering, with a concentration in Data Science. 
+                With this degree, I hope to positively impact many as a software engineer. My passion is to connect people with technology, ensuring
+                that people are able to interact with technology without difficulty. With my background in tech and design, I hope to have the necessary
+                skills to make this change in the world. Outside of school, projects and work, I'm into cooking, hitting the gym, playing sports, and 
+                gaming for fun.
+            </p>
         </div>
 
         <img src="images/face-image2.jpeg" alt="" class="about-me__img">
