--- a/portfolio-item2.html
+++ b/portfolio-item2.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="images/namelogo.png" alt="">
+                <img src="images/name-logo.png" alt="">
             </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -40,6 +40,9 @@
     </section>
 
     <div class="portfolio-item-individual">
+        <p class="section__subtitle">
+            <strong>------PAGE STILL IN PROGRESS------</strong>
+        </p>
         <p>
             Creating this portfolio website began from scratch with a blank index.html page. A mostly front=end project, I developed with HTML, CSS, and a small amount of JavaScript. The largest focus of this project was on the CSS.
         </p>
