updated index footer and added more to portfolio descriptions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- My services -->
     <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
+        <h2 class="section__title section__title--services">My Experience</h2>
         <div class="services">
             <div class="service">
                 <h3>Education</h3>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="service">
-                <h3>Internships and Experience</h3>
+                <h3>Internships</h3>
                 <p>
                     My previous internship enhanced both my technical skills and my understanding of professional collaboration among 
                     software engineers. I gained valuable insights into the use of industry tools and the importance of facilitating 
@@ -116,13 +116,18 @@
         <a href="mailto:kotab@uw.edu" class="footer__link">kotab@uw.edu</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a href="https://www.linkedin.com/in/kota-bercey/" class="social-list__link">
+                <a href="https://www.linkedin.com/in/kota-bercey/" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a href="https://github.com/koota1/Portfolio-Site" class="social-list__link">
+                <a href="https://github.com/koota1/Portfolio-Site" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://drive.google.com/file/d/18xw6UktXi-V3buqPBdvfQJ-J9OVzCBaJ/view?usp=sharing" class="social-list__link" target="_new">
+                    <i class="fa-solid fa-file"></i>
                 </a>
             </li>
         </ul>
