--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -118,7 +118,11 @@
             <strong>Reflection</strong>
         </p>
         <p>
-
+            My experience with Kids Code Club was a valuable learning opportunity. It emphasized the importance of user-centric design 
+            and the need for effective navigation tools. I improved my technical skills and developed a collaborative mindset, focusing 
+            on consistency and teamwork. Enhancing the website's tagging system challenged my problem-solving abilities and highlighted 
+            the importance of continuous learning and adaptability in a professional context. This experience was a significant step in 
+            my journey toward becoming a more well-rounded and capable professional.
         </p>
     </div>
 
@@ -128,13 +132,18 @@
         <a href="mailto:kotab@uw.edu" class="footer__link">kotab@uw.edu</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a href="https://www.linkedin.com/in/kota-bercey/" class="social-list__link">
+                <a href="https://www.linkedin.com/in/kota-bercey/" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a href="https://github.com/koota1/portfolio" class="social-list__link">
+                <a href="https://github.com/koota1/portfolio" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://drive.google.com/file/d/18xw6UktXi-V3buqPBdvfQJ-J9OVzCBaJ/view?usp=sharing" class="social-list__link" target=”_new”>
+                    <i class="fa-solid fa-file"></i>
                 </a>
             </li>
         </ul>
