--- a/portfolio-item2.html
+++ b/portfolio-item2.html
@@ -58,13 +58,18 @@
         <a href="mailto:kotab@uw.edu" class="footer__link">kotab@uw.edu</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a href="https://www.linkedin.com/in/kota-bercey/" class="social-list__link">
+                <a href="https://www.linkedin.com/in/kota-bercey/" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a href="https://github.com/koota1/Portfolio-Site" class="social-list__link">
+                <a href="https://github.com/koota1/Portfolio-Site" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://drive.google.com/file/d/18xw6UktXi-V3buqPBdvfQJ-J9OVzCBaJ/view?usp=sharing" class="social-list__link" target=”_new”>
+                    <i class="fa-solid fa-file"></i>
                 </a>
             </li>
         </ul>
