changed github link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </a>
             </li>
             <li class="social-list__item">
-                <a href="https://github.com/koota1/Portfolio-Site" class="social-list__link" target=”_new”>
+                <a href="https://github.com/koota1/portfolio" class="social-list__link" target=”_new”>
                     <i class="fa-brands fa-github"></i>
                 </a>
             </li>
