--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p>
                 I currently go to the University of Washington for Human Centered Design and Engineering, with a concentration in Data Science. 
                 With this degree, I hope to positively impact many as a software engineer. My passion is to connect people with technology, ensuring
-                that people are able to interact with technology without difficulty. With my background in tech and design, I hope to have the necessary
+                that people are able to interact with technology without difficulty. With my background in tech and design, I have the necessary
                 skills to make this change in the world. Outside of school, projects and work, I'm into cooking, hitting the gym, playing sports, and 
                 gaming for fun.
             </p>
